<resources>
    <string name="app_name">Exam 1 by wangy16</string>
    <string name="action_clear">Clear</string>
    <string name="correct">Correct: </string>
    <string name="incorrect">Incorrect: </string>
    <string name="correct_number">0</string>
    <string name="incorrect_number">0</string>
    <string name="start_text">Learn the triples!</string>
    <string name="triple_question">Triple?</string>
    <string name="true_triple">Triple: </string>
    <string name="reset_scores">Reset scores</string>

</resources>
